objects/PAN__c.object
<CustomObject>
    <description>PAN= Personnel Action Notice - used to manage new hires, changes to existing employees and separation of employees</description>
    <fields>
        <fullName>Applicable_Employee__c</fullName>
        <label>Applicable Employee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Percentage__c</fullName>
        <label>Bonus Percentage</label>
        <picklist>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bonus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Allowance__c</fullName>
        <label>Car Allowance</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible2__c</fullName>
        <label>Commission Eligible</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the employee eligible to be paid commission?</description>
        <label>Commission Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_to_Non_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission to Non Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator_s_Manager_s_Email__c</fullName>
        <defaultValue>$User.Manager_Email_Address__c</defaultValue>
        <description>Hidden field referenced by approval process</description>
        <label>Creator&apos;s Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Current_Department__c</fullName>
        <formula>Vin_Employee__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employees_Last_Name__c</fullName>
        <inlineHelpText>Please list the Last name of the Current Employee that the NEW Hire will be setup as.</inlineHelpText>
        <label>Current Employees Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Manager__c</fullName>
        <formula>Vin_Employee__r.Reports_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <formula>Vin_Employee__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Salary__c</fullName>
        <label>Current Salary</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Title__c</fullName>
        <formula>Vin_Employee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Department Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department_When_PAN_Created__c</fullName>
        <defaultValue>&quot;WILL BE AUTO-FILLED&quot;</defaultValue>
        <inlineHelpText>The department of the employee when the PAN was created.</inlineHelpText>
        <label>Department When PAN Created</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>HY17691000 HY Ad Ops - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17676000 HY Ad Ops - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17690000 HY Content - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17675000 HY Content - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17697000 HY Development - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17682000 HY Development - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17698000 HY Executive - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17683000 HY Executive - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17687000 HY Finance - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17672000 HY Finance - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17699000 HY Human Resources - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17684000 HY Human Resources - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17696000 HY Implementation - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17681000 HY Implementation - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17688000 HY IT - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17673000 HY IT - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17671000 HY Marketing - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17686000 HY Marketing - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17692000 HY Operations - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17677000 HY Operations - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17695000 HY Performance Mgmnt - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17680000 HY Perform. Mgmnt - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17670000  HY Product - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17685000 HY Product - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17689000 HY Sales – SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17674000 HY Sales - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17693000 HY Support - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17678000 HY Support - Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17694000 HY Training - SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HY17679000 HY Training - Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date and time at which the employee will begin.</description>
        <inlineHelpText>The date and time at which this modification becomes effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Rehire__c</fullName>
        <label>Eligible for Rehire</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Password__c</fullName>
        <label>Email Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Username__c</fullName>
        <label>Email Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Alias__c</fullName>
        <formula>Vin_Employee__r.Alias</formula>
        <inlineHelpText>formula field that reads the employee&apos;s alias name</inlineHelpText>
        <label>Employee Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <formula>Vin_Employee__r.Email</formula>
        <label>Employee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Vin_Employee__r.EmployeeNumber</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Notes__c</fullName>
        <inlineHelpText>Manager may describe optional or additional phone equipment needed.</inlineHelpText>
        <label>Equipment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>Equipment provided by company for employee to perform required duties.</description>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop Computer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual Monitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop - Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop - Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Programs/Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Manuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Exempt_Picklist__c</fullName>
        <label>Exempt</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Unchecked box means employee is not exempt.</description>
        <inlineHelpText>Check the box if employee is exempt.</inlineHelpText>
        <label>Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exempt_to_Non_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt to Non Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Employee&apos;s first name</description>
        <label>First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>The floor in building 3 the employee will be working on</description>
        <label>Floor</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Floor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help_Information__c</fullName>
        <description>Instructions on how to create and submit a PAN request.</description>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001U7HI&quot;, &quot;Help&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeAddress2__c</fullName>
        <formula>$User.Home_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HomeAddress2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Employee&apos;s home address.</description>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_City_State__c</fullName>
        <description>Employee&apos;s home city and state.</description>
        <label>Home City, State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Employee&apos;s home phone number.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>If_ne__c</fullName>
        <label>If New Role, New Title?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_It_Budgeted__c</fullName>
        <label>Is It Budgeted?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Position_in_Budget__c</fullName>
        <label>Is Position in Budget?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Employee&apos;s job title.</description>
        <label>Job Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Notes to be added as justification for this modification (if applicable).</description>
        <inlineHelpText>Reason for this modification (optional).</inlineHelpText>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KRONOS_Editing_Rights2__c</fullName>
        <label>KRONOS Editing Rights</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KRONOS_Editing_Rights__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KRONOS Editing Rights</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Day_Worked__c</fullName>
        <label>Last Day Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Employee&apos;s last name</description>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lateral_Move__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lateral Move</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For changing location</inlineHelpText>
        <label>Location Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location from which the employee will be working.</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Building 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10th Floor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MI__c</fullName>
        <inlineHelpText>Middle Initial Only</inlineHelpText>
        <label>MI</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_When_PAN_Created__c</fullName>
        <defaultValue>&quot;WILL BE AUTO-FILLED&quot;</defaultValue>
        <inlineHelpText>The manager of the employee when the PAN was created.</inlineHelpText>
        <label>Manager When PAN Created</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify__c</fullName>
        <description>Ways in which an existing employee&apos;s status within the company has changed.</description>
        <label>Modify</label>
        <picklist>
            <picklistValues>
                <fullName>Demotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elimination of Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Boss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motosnap_Password__c</fullName>
        <label>Motosnap Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motosnap_Username__c</fullName>
        <label>Motosnap Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_As_It_Appears_In_Email__c</fullName>
        <description>Employee&apos;s name as it will appear in company email</description>
        <label>Work Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Hire_Only__c</fullName>
        <label>New Hire Only</label>
        <picklist>
            <picklistValues>
                <fullName>New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rehire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/New Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/Rehire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Job_Title__c</fullName>
        <description>To be used when a new job title is needed.</description>
        <inlineHelpText>To be used when a new job title is needed.</inlineHelpText>
        <label>New Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>S1135 - Account Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1171 - Accounting Associate I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1172 - Accounting Associate II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1002 - Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1003 - Admin Assist Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1173 - Admin Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1214 - Application Support Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1337 - Associate Data Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1264 – Associate Mgr, Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1254 - Assoc Mgr, Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1168 - Associate Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1260 - Assoc Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1169 - Associate Software Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1163 - Brand Coord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1005 - Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1275 – Business Development Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1335 - Certified Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1229 - Compliance Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1009 - Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1143 - Corporate Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1222 - Corporate Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1013 - Creative Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1014 - Creative Designer Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1106 - Creative Project Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1177 - Cust. Service Rep II- Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1178 - Cust. Service Rep II- Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1176 - Customer Service Rep I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1162 - Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1124 - Database Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1225 - Dealer Relations Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Role__c</fullName>
        <label>New Role?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_or_Existing__c</fullName>
        <label>New or Existing</label>
        <picklist>
            <picklistValues>
                <fullName>New Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backfill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Employee&apos;s nickname</description>
        <label>Nickname</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Commission_to_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Commission to Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Exempt_to_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Exempt to Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Equipment__c</fullName>
        <label>Other Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Negotiables_Additional_Comments__c</fullName>
        <label>Other Negotiables Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Negotiables__c</fullName>
        <description>Other methods by which the employee may be compensated.</description>
        <label>Other Negotiables</label>
        <picklist>
            <picklistValues>
                <fullName>Car Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra Vacation Time</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_New_Job_Title__c</fullName>
        <description>To be used when no known job title exists.</description>
        <inlineHelpText>To be used when no known job title exists.  Choose Other from the New Job Title picklist in order to use this field.</inlineHelpText>
        <label>Other New Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Type__c</fullName>
        <formula>CASE( RecordTypeId,
&quot;01270000000Q7hg&quot;, &quot;New Hire&quot;,
&quot;01270000000Q91q&quot;, &quot;New Hire&quot;,
&quot;01270000000Q7hf&quot;, &quot;Modify Employee&quot;,
&quot;01270000000Q7hh&quot;, &quot;Modify Employee&quot;,
&quot;01270000000Q7hp&quot;, &quot;Separate&quot;,
&quot;01270000000Q7hi&quot;, &quot;Separate&quot;,
&quot;01270000000Q8TZ&quot;, &quot;Job Position Requisition&quot;,
&quot;UNCATEGORIZED&quot;
)</formula>
        <label>PAN Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Password__c</fullName>
        <label>PC Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Username__c</fullName>
        <label>PC Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Hours_Taken_YTD__c</fullName>
        <inlineHelpText>Fill in the number of PTO Hours used so far this year.</inlineHelpText>
        <label>PTO Hours Taken YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Payout__c</fullName>
        <description>Amount owed to employee for PTO not taken.</description>
        <inlineHelpText>Amount owed to employee for PTO not taken.</inlineHelpText>
        <label>PTO Payout</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay__c</fullName>
        <description>Method by which the employee will be paid.</description>
        <label>Pay</label>
        <picklist>
            <picklistValues>
                <fullName>Salary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Password__c</fullName>
        <label>Phone Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Set_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of employee to copy phone settings from.</inlineHelpText>
        <label>Phone Set Up</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PAN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Setup_First_Name__c</fullName>
        <inlineHelpText>Please list the First name of the Current Employee that the NEW Hire will be setup as.</inlineHelpText>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Backfill__c</fullName>
        <label>Reason for Backfill</label>
        <picklist>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Separation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reporting Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup manager the new employee will report to.</inlineHelpText>
        <label>Reports To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HR Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>